--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name": "jest-demos",
 	"jest": {
 		"reporters": [
-			"default"
+			"default",
+			"jest-github-reporter"
 		]
 	},
 	"version": "1.0.0",
@@ -33,10 +34,10 @@
 		"babel-preset-env": "^1.7.0",
 		"babel-preset-react": "^6.24.1",
 		"jest": "^23.6.0",
+		"jest-github-reporter": "^0.4.8",
 		"react-test-renderer": "^16.5.2"
 	},
 	"dependencies": {
-		"jest-github-reporter": "^1.0.2",
 		"react": "^16.5.2"
 	}
 }
