--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	"description": "A collection of simple demos of Jest",
 	"main": "index.js",
 	"scripts": {
-		"test": "jest"
+		"test": "jest --testLocationInResults"
 	},
 	"repository": {
 		"type": "git",
